yaml/app-a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: App-A
spec:
  containers:
    - name: app_a
      image: nginx
